Removed ClassUtils
It doesn't actually give any benefits